--- a/src/App.css
+++ b/src/App.css
@@ -39,5 +39,59 @@
 
 header {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-around;
+  align-items: center;
+  background-color: #61dafb;
+  color:coral;
+}
+
+header img {
+  height: 100px;
+}
+
+header a {
+  color: rgb(240, 77, 18);
+  text-decoration: none;
+  font-weight: 800;
+  font-size: 1.5rem;
+
+}
+
+.orderForm img {
+  opacity: 0.4;
+  margin: auto;
+  display: block;
+  width: 50%;
+}
+
+.pizzaForm img {
+  opacity: 0.4;
+  margin: 10% ;
+  display: block;
+  width: 80%;
+}
+
+.home img {
+  margin: auto;
+  display: block;
+  width: 80%;
+}
+
+.homeBtn {
+  justify-content: center;
+  display: flex;
+}
+
+h2 {
+  display: flex;
+  justify-content: space-around;
+  font-size: 6rem;
+  color: rgb(0, 255, 221);
+}
+
+footer {
+  display: flex;
+  justify-content: space-around;
+  font-size: 2rem;
+  color: rgb(0, 255, 221);
 }
