--- a/src/components/App.css
+++ b/src/components/App.css
@@ -64,12 +64,30 @@ header a {
   width: 50%;
 }
 
-.pizzaForm img {
+.pizzaForm-container {
+  border: 1px solid rgb(210, 210, 210);
+  border-radius: 6px;
+  box-shadow: 0px 1px 6px -2px rgb(128, 127, 127);
+  margin: 16px 8px;
+  padding: 16px;
+  background-color: white;
+}
+
+.pizzaForm-container img {
   opacity: 0.4;
   margin: 10% ;
   display: block;
   width: 80%;
 }
+
+.pizza-form {
+  display: flex;
+  align-items: baseline;
+}
+
+  @media (max-width: 650px) {
+    flex-direction: column;
+  }
 
 .home img {
   margin: auto;
